Optimize docker build